--- a/sb-ex/package.json
+++ b/sb-ex/package.json
@@ -9,7 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
